@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Set jobs for Test::TidyAll plugin to 4 by default.
+
+
 0.72     2016-09-25
 
 - Make the Pod::Weaver bits work when used from a subclass of this bundle.
